--- a/TutorDot_iOS_1/TutorDot_iOS/Cells/AlertTableViewCell.xib
+++ b/TutorDot_iOS_1/TutorDot_iOS/Cells/AlertTableViewCell.xib
@@ -27,19 +27,19 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ogt-uk-mwj">
-                                <rect key="frame" x="52" y="23" width="35.5" height="17"/>
+                                <rect key="frame" x="52" y="20" width="35.5" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mmh-Za-V0E">
-                                <rect key="frame" x="52" y="47" width="31" height="14.5"/>
+                                <rect key="frame" x="52" y="41" width="31" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cDY-gl-O6e">
-                                <rect key="frame" x="281" y="25" width="13" height="13"/>
+                                <rect key="frame" x="281" y="22" width="13" height="13"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="13" id="7YU-J4-fhi"/>
                                     <constraint firstAttribute="height" constant="13" id="ktb-Fh-wcq"/>
@@ -48,13 +48,13 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="Mmh-Za-V0E" firstAttribute="top" secondItem="ogt-uk-mwj" secondAttribute="bottom" constant="7" id="0s4-Ix-5r6"/>
+                            <constraint firstItem="Mmh-Za-V0E" firstAttribute="top" secondItem="ogt-uk-mwj" secondAttribute="bottom" constant="4" id="0s4-Ix-5r6"/>
                             <constraint firstItem="Hhj-uN-adi" firstAttribute="leading" secondItem="a69-Iz-YQD" secondAttribute="leading" constant="13" id="7iJ-Es-7T4"/>
                             <constraint firstAttribute="trailing" secondItem="cDY-gl-O6e" secondAttribute="trailing" constant="10" id="9hP-9v-MMf"/>
-                            <constraint firstItem="ogt-uk-mwj" firstAttribute="top" secondItem="a69-Iz-YQD" secondAttribute="top" constant="23" id="Buy-ZR-C2t"/>
                             <constraint firstItem="Mmh-Za-V0E" firstAttribute="leading" secondItem="Hhj-uN-adi" secondAttribute="trailing" constant="13" id="Cw6-Zh-1c0"/>
                             <constraint firstItem="Hhj-uN-adi" firstAttribute="centerY" secondItem="a69-Iz-YQD" secondAttribute="centerY" id="GsP-5p-LqY"/>
                             <constraint firstItem="cDY-gl-O6e" firstAttribute="centerY" secondItem="ogt-uk-mwj" secondAttribute="centerY" id="WkP-TU-qSv"/>
+                            <constraint firstItem="ogt-uk-mwj" firstAttribute="top" secondItem="a69-Iz-YQD" secondAttribute="top" constant="20" id="qfL-GB-GxE"/>
                             <constraint firstItem="ogt-uk-mwj" firstAttribute="leading" secondItem="Hhj-uN-adi" secondAttribute="trailing" constant="13" id="x8h-D9-hXG"/>
                         </constraints>
                     </view>
