--- a/TutorDot_iOS_1/TutorDot_iOS/Cells/TutorCollectionViewCell.xib
+++ b/TutorDot_iOS_1/TutorDot_iOS/Cells/TutorCollectionViewCell.xib
@@ -43,7 +43,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="강남역 11번 출구 할리스" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qud-Di-Q0s">
                                 <rect key="frame" x="37.5" y="54" width="134" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calenderSeletionImgLocation" translatesAutoresizingMaskIntoConstraints="NO" id="cgv-2W-Ctq">
