--- a/TutorDot_iOS_1/TutorDot_iOS/Storyboards/Base.lproj/MainTab.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Storyboards/Base.lproj/MainTab.storyboard
@@ -9,7 +9,7 @@
         <!--TabbarVC-->
         <scene sceneID="4UA-zn-mwu">
             <objects>
-                <tabBarController storyboardIdentifier="TabbarVC" automaticallyAdjustsScrollViewInsets="NO" id="fB6-hD-4QB" customClass="TabbarVC" customModule="TutorDot_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController restorationIdentifier="TabbarVC" storyboardIdentifier="TabbarVC" automaticallyAdjustsScrollViewInsets="NO" id="fB6-hD-4QB" customClass="TabbarVC" customModule="TutorDot_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="y2x-Ec-4Bp">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
