--- a/TutorDot_iOS_1/TutorDot_iOS/Storyboards/Calendar.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Storyboards/Calendar.storyboard
@@ -357,25 +357,25 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="시작" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gye-YB-MVJ">
-                                <rect key="frame" x="16" y="150" width="26" height="23"/>
+                                <rect key="frame" x="16" y="150" width="26" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="종료" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LQq-sw-ynn">
-                                <rect key="frame" x="16" y="466" width="26" height="18"/>
+                                <rect key="frame" x="16" y="461" width="26" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="위치" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vym-Bd-0ZY">
-                                <rect key="frame" x="16" y="779" width="26" height="18"/>
+                                <rect key="frame" x="16" y="774" width="26" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bQV-2n-UT8">
-                                <rect key="frame" x="16" y="189" width="298" height="43"/>
+                                <rect key="frame" x="16" y="184" width="298" height="43"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="43" id="grC-ty-tV0"/>
                                 </constraints>
@@ -383,7 +383,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oOJ-5k-mmv">
-                                <rect key="frame" x="16" y="813" width="382" height="43"/>
+                                <rect key="frame" x="16" y="808" width="382" height="43"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="43" id="0yA-Wt-Idj"/>
                                 </constraints>
@@ -391,24 +391,21 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qug-rI-fOx">
-                                <rect key="frame" x="16" y="500" width="298" height="43"/>
+                                <rect key="frame" x="16" y="495" width="298" height="43"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="43" id="XIJ-CB-zJL"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KOI-8a-aA4">
-                                <rect key="frame" x="372" y="109.66666666666667" width="30" height="34.000000000000014"/>
-                            </button>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="hVF-Bo-WrG">
-                                <rect key="frame" x="0.0" y="242" width="414" height="216"/>
+                                <rect key="frame" x="0.0" y="237" width="414" height="216"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="216" id="b3Y-n0-8Ux"/>
                                 </constraints>
                             </datePicker>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N6s-DG-GhK">
-                                <rect key="frame" x="339" y="196" width="60" height="29"/>
+                                <rect key="frame" x="339" y="191" width="60" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="21p-Kz-PPh"/>
                                 </constraints>
@@ -417,13 +414,13 @@
                                 </connections>
                             </button>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="COQ-ql-TMp">
-                                <rect key="frame" x="0.0" y="553" width="414" height="216"/>
+                                <rect key="frame" x="0.0" y="548" width="414" height="216"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="216" id="Aqp-Z4-8k2"/>
                                 </constraints>
                             </datePicker>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DDg-zQ-PoL">
-                                <rect key="frame" x="339" y="506.33333333333326" width="60" height="30"/>
+                                <rect key="frame" x="339" y="501.66666666666674" width="60" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="SZq-fq-myf"/>
                                 </constraints>
@@ -440,9 +437,7 @@
                             <constraint firstItem="iJf-qm-vag" firstAttribute="top" secondItem="BGX-2k-WA1" secondAttribute="top" id="A0y-df-0Ra"/>
                             <constraint firstItem="yIf-oe-7sj" firstAttribute="top" secondItem="iJf-qm-vag" secondAttribute="bottom" constant="22" id="Cfm-s7-1iC"/>
                             <constraint firstItem="eC7-pi-aJ9" firstAttribute="trailing" secondItem="bQV-2n-UT8" secondAttribute="trailing" constant="100" id="Cg0-Ac-v0r"/>
-                            <constraint firstItem="KOI-8a-aA4" firstAttribute="centerY" secondItem="yIf-oe-7sj" secondAttribute="centerY" id="CnM-d2-DVC"/>
                             <constraint firstItem="N6s-DG-GhK" firstAttribute="centerY" secondItem="bQV-2n-UT8" secondAttribute="centerY" id="DVR-TV-OgQ"/>
-                            <constraint firstItem="eC7-pi-aJ9" firstAttribute="trailing" secondItem="KOI-8a-aA4" secondAttribute="trailing" constant="12" id="Dpp-d2-okh"/>
                             <constraint firstItem="hVF-Bo-WrG" firstAttribute="top" secondItem="N6s-DG-GhK" secondAttribute="bottom" constant="17" id="EWg-op-fMc"/>
                             <constraint firstItem="qug-rI-fOx" firstAttribute="top" secondItem="LQq-sw-ynn" secondAttribute="bottom" constant="16" id="F0g-9a-ROw"/>
                             <constraint firstItem="bQV-2n-UT8" firstAttribute="top" secondItem="gye-YB-MVJ" secondAttribute="bottom" constant="16" id="FIO-XR-hOR"/>
@@ -466,7 +461,6 @@
                             <constraint firstItem="bQV-2n-UT8" firstAttribute="leading" secondItem="eC7-pi-aJ9" secondAttribute="leading" constant="16" id="qWM-VU-HUW"/>
                             <constraint firstItem="oOJ-5k-mmv" firstAttribute="top" secondItem="Vym-Bd-0ZY" secondAttribute="bottom" constant="16" id="sLg-lK-Hbt"/>
                             <constraint firstItem="qug-rI-fOx" firstAttribute="leading" secondItem="eC7-pi-aJ9" secondAttribute="leading" constant="16" id="xon-BX-KYb"/>
-                            <constraint firstItem="N6s-DG-GhK" firstAttribute="top" secondItem="KOI-8a-aA4" secondAttribute="bottom" constant="52.333333333333314" id="yuK-OP-4hR"/>
                             <constraint firstItem="iJf-qm-vag" firstAttribute="trailing" secondItem="eC7-pi-aJ9" secondAttribute="trailing" id="z4u-gl-zEp"/>
                             <constraint firstItem="4ub-df-dnl" firstAttribute="leading" secondItem="eC7-pi-aJ9" secondAttribute="leading" constant="16" id="zBX-hA-zrH"/>
                             <constraint firstItem="eC7-pi-aJ9" firstAttribute="trailing" secondItem="N6s-DG-GhK" secondAttribute="trailing" constant="15" id="zRW-6M-t0l"/>
@@ -475,7 +469,6 @@
                     </view>
                     <connections>
                         <outlet property="addCancelButton" destination="gv0-6F-0CE" id="7um-Cz-HvU"/>
-                        <outlet property="classEditButton" destination="KOI-8a-aA4" id="pwV-jv-Ky6"/>
                         <outlet property="classLabel" destination="yIf-oe-7sj" id="bzr-Uf-oGa"/>
                         <outlet property="editButton" destination="fSN-RE-ERE" id="DZW-Ll-SIg"/>
                         <outlet property="endConstraint" destination="Aqp-Z4-8k2" id="R12-EP-xJW"/>
@@ -493,7 +486,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YbR-cB-qjh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1853.6231884057972" y="-115.17857142857142"/>
+            <point key="canvasLocation" x="2546" y="-115"/>
         </scene>
         <!--Class AddVC-->
         <scene sceneID="OcD-dZ-8xq">
