Update alertVC, calendarVC

--- a/TutorDot_iOS_1/TutorDot_iOS/Cells/CalendarCollectionViewCell.xib
+++ b/TutorDot_iOS_1/TutorDot_iOS/Cells/CalendarCollectionViewCell.xib
@@ -20,12 +20,12 @@
                         <rect key="frame" x="13" y="13" width="24" height="24"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e7i-6a-Yt4">
-                                <rect key="frame" x="9" y="6.5" width="6" height="11"/>
+                                <rect key="frame" x="10" y="6.5" width="4.5" height="11"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="11" id="vIh-3e-WvR"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="12"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
