--- a/TutorDot_iOS_1/TutorDot_iOS/Storyboards/Notes.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Storyboards/Notes.storyboard
@@ -65,31 +65,31 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="103"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="현재 수업 진행률" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PB8-u0-5fP">
-                                                    <rect key="frame" x="20" y="30" width="92" height="17"/>
+                                                    <rect key="frame" x="20" y="20" width="92" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="KOi-HZ-6k6">
-                                                    <rect key="frame" x="20" y="65" width="335" height="19"/>
+                                                    <rect key="frame" x="20" y="51.666666666666664" width="335" height="16.999999999999993"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="19" id="ea9-iF-K80"/>
+                                                        <constraint firstAttribute="height" constant="17" id="ea9-iF-K80"/>
                                                     </constraints>
                                                 </progressView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6회차, 12시간" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q1i-Kb-Jod">
-                                                    <rect key="frame" x="200" y="91" width="69" height="14.333333333333329"/>
+                                                    <rect key="frame" x="200" y="75.666666666666671" width="69" height="14.333333333333329"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="16시간" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ur9-lg-OcA">
-                                                    <rect key="frame" x="323.66666666666669" y="91" width="34.333333333333314" height="14.333333333333329"/>
+                                                    <rect key="frame" x="323.66666666666669" y="75.666666666666671" width="34.333333333333314" height="14.333333333333329"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4UN-hv-E3Y">
-                                                    <rect key="frame" x="323.33333333333331" y="67" width="26.666666666666686" height="14.333333333333329"/>
+                                                    <rect key="frame" x="323.33333333333331" y="57.000000000000007" width="26.666666666666686" height="14.333333333333336"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                                                     <color key="textColor" red="0.40784313729999999" green="0.45882352939999999" blue="0.86666666670000003" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -99,15 +99,15 @@
                                             <constraints>
                                                 <constraint firstItem="q1i-Kb-Jod" firstAttribute="leading" secondItem="Wqa-MG-Nu8" secondAttribute="leading" constant="200" id="6qj-50-3bc"/>
                                                 <constraint firstAttribute="trailing" secondItem="KOi-HZ-6k6" secondAttribute="trailing" constant="20" id="8rt-Uu-dZg"/>
-                                                <constraint firstItem="4UN-hv-E3Y" firstAttribute="top" secondItem="Wqa-MG-Nu8" secondAttribute="top" constant="67" id="FDN-eD-SFd"/>
+                                                <constraint firstItem="4UN-hv-E3Y" firstAttribute="top" secondItem="Wqa-MG-Nu8" secondAttribute="top" constant="57" id="FDN-eD-SFd"/>
+                                                <constraint firstAttribute="bottom" secondItem="q1i-Kb-Jod" secondAttribute="bottom" constant="13" id="Gwq-RE-qMf"/>
                                                 <constraint firstItem="KOi-HZ-6k6" firstAttribute="leading" secondItem="Wqa-MG-Nu8" secondAttribute="leading" constant="20" id="MzF-Ur-r3J"/>
                                                 <constraint firstAttribute="height" constant="117" id="OIt-EK-8Gv"/>
                                                 <constraint firstAttribute="trailing" secondItem="4UN-hv-E3Y" secondAttribute="trailing" constant="25" id="PKr-0x-NrA"/>
                                                 <constraint firstItem="q1i-Kb-Jod" firstAttribute="top" secondItem="KOi-HZ-6k6" secondAttribute="bottom" constant="7" id="Vtp-KJ-9Nd"/>
                                                 <constraint firstItem="PB8-u0-5fP" firstAttribute="leading" secondItem="Wqa-MG-Nu8" secondAttribute="leading" constant="20" id="WFw-v8-hMx"/>
-                                                <constraint firstItem="KOi-HZ-6k6" firstAttribute="top" secondItem="PB8-u0-5fP" secondAttribute="bottom" constant="18" id="Yef-6A-wNV"/>
                                                 <constraint firstAttribute="trailing" secondItem="ur9-lg-OcA" secondAttribute="trailing" constant="17" id="gjA-ie-Unb"/>
-                                                <constraint firstItem="PB8-u0-5fP" firstAttribute="top" secondItem="Wqa-MG-Nu8" secondAttribute="top" constant="30" id="mB1-Ta-hlH"/>
+                                                <constraint firstItem="PB8-u0-5fP" firstAttribute="top" secondItem="Wqa-MG-Nu8" secondAttribute="top" constant="20" id="mB1-Ta-hlH"/>
                                                 <constraint firstItem="ur9-lg-OcA" firstAttribute="top" secondItem="KOi-HZ-6k6" secondAttribute="bottom" constant="7" id="qzs-lN-ixT"/>
                                             </constraints>
                                         </view>
@@ -177,7 +177,6 @@
                                                                     <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                                                     <state key="normal" image="classLogModificationBtnCircleUnpick"/>
                                                                     <connections>
-                                                                        <action selector="CompleteBtn:" destination="iM5-Xg-hMy" eventType="touchUpInside" id="GjL-Yb-625"/>
                                                                         <action selector="pressCompleteBtn:" destination="iM5-Xg-hMy" eventType="touchUpInside" id="gY4-Rd-U7u"/>
                                                                     </connections>
                                                                 </button>
